# baostock-master

./: .gitignore  README.md  UI_UPDATE_SUMMARY.md  WEB_UI_OPTIMIZATION_REPORT.md  app.py  config.yaml  create_ol.py  debug_backtest.py  debug_optuna.py  main.py  milestone_4_report.md  optimization_review_report.md  optimize_random_dates.py  pyproject.toml  pytest.ini  run_automation.py  selected_stocks_20260224.csv  selected_stocks_20260225.csv  selected_stocks_20260226.csv  selected_stocks_20260227.csv  temp_backtest_chart.html  test_random_dates.py  train_ens.py  write_classifier.py
data/: sh.000001.csv  sh.000002.csv  sh.000003.csv  sh.000004.csv  sh.000005.csv  sh.000006.csv  sh.000007.csv  sh.000008.csv  sh.000009.csv  sh.000010.csv  sh.000011.csv  sh.000015.csv  sh.000016.csv  sh.000017.csv  sh.000018.csv  sh.000019.csv  sh.000020.csv  sh.000021.csv  sh.000025.csv  sh.000026.csv  sh.000027.csv  sh.000028.csv  sh.000029.csv  sh.000030.csv  sh.000031.csv  sh.000032.csv  sh.000033.csv  sh.000034.csv  sh.000035.csv  sh.000036.csv  sh.000037.csv  sh.000038.csv  sh.000039.csv  sh.000040.csv  sh.000041.csv  sh.000042.csv  sh.000043.csv  sh.000044.csv  sh.000045.csv  sh.000046.csv  (+2668 more)
docs/: PRD_stock_selection_platform.md
models/: alpha_lgbm.txt  feature_importance.csv
quant/: adaptive_strategy.py  analyzer.py  backtester.py  backtester_optimized.py  cache_utils.py  config.py  data_updater.py  ensemble_trainer.py  features.py  features_enhanced.py  logger.py  market_classifier.py  numba_accelerator.py  online_learner.py  optimizer.py  optimizer_enhanced.py  trainer.py  (+8 more)
(+81 files in other folders)
